Bug 1822911 - Ignore bogus leave-notify on pekwm. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D174368